// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call.coffee 1`] = `
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee

`;

exports[`call.coffee 2`] = `
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee

`;

exports[`call.coffee 3`] = `
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee

`;

exports[`implicit-call.coffee 1`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbb ccccccccccccccccc
  ddddddddd eeeeeeeeeeeeee
]

f(
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbb ccccccccccccccccc
  ddddddddd eeeeeeeeeeeee
)

{
  a
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
  d: ddddddddd eeeeeeee
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb ccccccccccccccccc
  d = ddddddd eeeeeeee
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb cccccccccc
  dddddddddd: eeeeeee ffffff
} if g

`;

exports[`implicit-call.coffee 2`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd eeeeeeeeeeeeee
]

f(
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd eeeeeeeeeeeee
)

{
  a,
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d: ddddddddd eeeeeeee
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d = ddddddd eeeeeeee
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc),
  dddddddddd: eeeeeee ffffff
} if g

`;

exports[`implicit-call.coffee 3`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd(eeeeeeeeeeeeee),
]

f(
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd(eeeeeeeeeeeee),
)

{
  a,
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d: ddddddddd(eeeeeeee),
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d = ddddddd(eeeeeeee),
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h,
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc),
  dddddddddd: eeeeeee(ffffff),
} if g

`;

exports[`implicit-object.coffee 1`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`implicit-object.coffee 2`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`implicit-object.coffee 3`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`indented-body.coffee 1`] = `
[-> b]

a(-> b)

(a = -> b) ->

{c, a: -> b}

[
  ->
    b
]

a(
  ->
    b
)

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a(->)

(a = ->) ->

{c, a: ->}

[
  a
  ->
    b
  c
]

a(
  a
  ->
    b
  c
)

(
  a
  d = ->
    b
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[-> b]

a -> b

(a = -> b) ->

{ c, a: -> b }

[
  ->
    b
]

a ->
  b

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a ->

(a = ->) ->

{ c, a: -> }

[
  a
,
  ->
    b
,
  c
]

a(
  a
,
  ->
    b
,
  c
)

(
  a
  d = ->
    b
,
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
,
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
,
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}

`;

exports[`indented-body.coffee 2`] = `
[-> b]

a(-> b)

(a = -> b) ->

{c, a: -> b}

[
  ->
    b
]

a(
  ->
    b
)

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a(->)

(a = ->) ->

{c, a: ->}

[
  a
  ->
    b
  c
]

a(
  a
  ->
    b
  c
)

(
  a
  d = ->
    b
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[-> b]

a -> b

(a = -> b) ->

{ c, a: -> b }

[
  ->
    b
]

a ->
  b

(
  a = ->
    b
) ->

{
  c,
  a: ->
    b
}

[->]

a ->

(a = ->) ->

{ c, a: -> }

[
  a
,
  ->
    b
,
  c
]

a(
  a
,
  ->
    b
,
  c
)

(
  a,
  d = ->
    b
,
  c
) ->

{
  a,
  d: ->
    b
  c
}

[
  a
,
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
,
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: ->
  c
}

`;

exports[`indented-body.coffee 3`] = `
[-> b]

a(-> b)

(a = -> b) ->

{c, a: -> b}

[
  ->
    b
]

a(
  ->
    b
)

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a(->)

(a = ->) ->

{c, a: ->}

[
  a
  ->
    b
  c
]

a(
  a
  ->
    b
  c
)

(
  a
  d = ->
    b
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[-> b]

a -> b

(a = -> b) ->

{ c, a: -> b }

[
  ->
    b
]

a ->
  b

(
  a = ->
    b
) ->

{
  c,
  a: ->
    b
}

[->]

a ->

(a = ->) ->

{ c, a: -> }

[
  a
,
  ->
    b
,
  c,
]

a(
  a
,
  ->
    b
,
  c,
)

(
  a,
  d = ->
    b
,
  c,
) ->

{
  a,
  d: ->
    b
  c,
}

[
  a
,
  ->
,
  c,
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
,
  ->
,
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = ->
,
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: ->
  c,
}

`;

exports[`object.coffee 1`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc
  dddddddddd: eeee
}

{
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({
  aaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc
  ddddddddd: e
}) ->

`;

exports[`object.coffee 2`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  dddddddddd: eeee
}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc,
  dddddddddd:
    eeee
}

({
  aaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  ddddddddd: e
}) ->

`;

exports[`object.coffee 3`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  dddddddddd: eeee,
}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc,
  dddddddddd:
    eeee,
}

({
  aaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  ddddddddd: e,
}) ->

`;

exports[`object-as-item.coffee 1`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

{h, i: {a, b: c}, j: d: e, f: g}

i: {a, b: c}, j: d: e, f: g

i: {a, b: c}, j: h

({a, b: c}, h) ->

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: {a, b: c}
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i:
    {a, b: c}
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: {a, b: c}
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  {a, b: c}
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: {a, b: c}
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: {a, b: c}
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{a, b: c}]

f({a, b: c})

({a, b: c}) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

{
  f
  d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
}

d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
) ->

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

{ h, i: { a, b: c }, j: d: e, f: g }

i: { a, b: c }
j: d: e, f: g

i: { a, b: c }
j: h

({ a, b: c }, h) ->

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: { a, b: c }
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i: { a, b: c }
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: { a, b: c }
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  { a, b: c }
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c }
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: { a, b: c }
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: { a, b: c }
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

({ a, b: c }) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
)

{
  f
  d:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
}

d:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
) ->

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c }
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
]

f(
  { a, b: c }
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)

`;

exports[`object-as-item.coffee 2`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

{h, i: {a, b: c}, j: d: e, f: g}

i: {a, b: c}, j: d: e, f: g

i: {a, b: c}, j: h

({a, b: c}, h) ->

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: {a, b: c}
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i:
    {a, b: c}
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: {a, b: c}
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  {a, b: c}
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: {a, b: c}
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: {a, b: c}
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{a, b: c}]

f({a, b: c})

({a, b: c}) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

{
  f
  d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
}

d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
) ->

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

{ h, i: { a, b: c }, j: d: e, f: g }

i: { a, b: c }
j: d: e, f: g

i: { a, b: c }
j: h

({ a, b: c }, h) ->

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l,
  i: { a, b: c },
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l,
  i: { a, b: c },
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: { a, b: c }
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  { a, b: c },
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c },
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l,
  h: { a, b: c },
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: { a, b: c }
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

({ a, b: c }) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a,
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
)

{
  f,
  d:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
}

d:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
) ->

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
]

f(
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)

`;

exports[`object-as-item.coffee 3`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

{h, i: {a, b: c}, j: d: e, f: g}

i: {a, b: c}, j: d: e, f: g

i: {a, b: c}, j: h

({a, b: c}, h) ->

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: {a, b: c}
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i:
    {a, b: c}
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: {a, b: c}
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  {a, b: c}
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: {a, b: c}
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: {a, b: c}
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{a, b: c}]

f({a, b: c})

({a, b: c}) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

{
  f
  d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
}

d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
) ->

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

{ h, i: { a, b: c }, j: d: e, f: g }

i: { a, b: c }
j: d: e, f: g

i: { a, b: c }
j: h

({ a, b: c }, h) ->

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
)

{
  l,
  i: { a, b: c },
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
}

{
  l,
  i: { a, b: c },
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
}

i: { a, b: c }
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  { a, b: c },
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
) ->

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c },
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l,
  h: { a, b: c },
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: { a, b: c }
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

({ a, b: c }) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a,
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc,
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
)

{
  f,
  d:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
}

d:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
) ->

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd,
]

f(
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd,
)

`;

exports[`params.coffee 1`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
) ->

`;

exports[`params.coffee 2`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
) ->

`;

exports[`params.coffee 3`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
) ->

`;
